--- a/rolll/Base.lproj/Main.storyboard
+++ b/rolll/Base.lproj/Main.storyboard
@@ -77,6 +77,7 @@
                     <connections>
                         <outlet property="emailTextField" destination="HVw-pB-8Pv" id="heK-ic-BcA"/>
                         <outlet property="passwordTextField" destination="uqR-Ew-fil" id="JcH-zC-XtF"/>
+                        <segue destination="7e6-OO-42x" kind="show" identifier="login" id="FGq-3B-E8S"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
