--- a/rolll/Game.storyboard
+++ b/rolll/Game.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jLE-NV-6oZ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -14,12 +14,12 @@
             <objects>
                 <viewController id="jLE-NV-6oZ" customClass="GameViewController" customModule="rolll" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="1rv-93-RYu"/>
-                        <viewControllerLayoutGuide type="bottom" id="sO6-jH-GQn"/>
+                        <viewControllerLayoutGuide type="top" id="1NX-Yy-cof"/>
+                        <viewControllerLayoutGuide type="bottom" id="1FT-UP-DQj"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="NkN-44-Lqo">
+                    <view key="view" contentMode="scaleToFill" id="7fI-Y6-2FY" customClass="SKView">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
